# openapi/openapi.yaml
@@ -100,7 +100,7 @@ paths:
                 type: string
                 example: TOKEN=secret; Path=/; HttpOnly
           description: Delete current user
-
+##
   /profile/photo:
     patch:
       tags:
@@ -595,6 +595,90 @@ paths:
       responses:
         200:
           description: Ok
+
+## добавил юр. лица
+  /legal-entities:
+    get:
+      summary: Get all legalentities
+      tags:
+        - federation
+      responses:
+        200:
+          description: A list of legalentities
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/LegalEntitiesDTO"
+        400:
+          description: Bad request
+        500:
+          description: Internal server error
+
+
+    post: 
+      summary: Create a new legal entity
+      tags:
+        - federation
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/LegalEntitiesDTO"
+      responses:
+        201:
+          description: Legal entity created successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/LegalEntitiesDTO"
+        400:
+          description: Bad request
+        500:
+          description: Internal server error
+  /legal-entities/{UUID}:
+    
+    patch:
+      parameters:
+        - $ref: "#/components/parameters/uuid"
+      summary: Change legal entity
+      tags:
+        - federation
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/LegalEntitiesDTO"
+      responses:
+        200:
+          description: Name updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/LegalEntitiesDTO"
+        400:
+          description: Bad request
+        404:
+          description: Legal entity not found
+        500:
+          description: Internal server error
+    delete:
+      parameters:
+        - $ref: "#/components/parameters/uuid"
+      summary: Delete legal entity
+      tags:
+        - federation
+      description: Delete legalentites
+      responses:
+        204:
+          description: Ok
+        404:
+          description: Legal entity not found
+        500:
+          description: Internal server error
+
 
   /federation:
     post:
@@ -4073,6 +4157,43 @@ components:
                   type: string
                   x-oapi-codegen-extra-tags:
                     validate: "trim,name,min=1,max=20"
+
+
+  ##
+    LegalEntitiesDTO:
+      x-go-type: dto.LegalEntitiesDTO
+      x-go-type-import:
+        name: LegalEntitiesDTO
+        path: github.com/krisch/crm-backend/dto
+      type: object
+      required:
+        - uuid
+        - name
+        - company_uuid
+      properties:
+        uuid:
+          type: string
+          format: uuid
+          x-oapi-codegen-extra-tags:
+            validate: "required,uuid"
+        name:
+          type: string
+        company_uuid:
+          type: string
+          format: uuid
+          x-oapi-codegen-extra-tags:
+            validate: "uuid"
+        created_at:
+          type: string
+          format: date-time
+        updated_at:
+          type: string
+          format: date-time
+        deleted_at:
+          type: string
+          format: date-time
+
+
 
     TaskPutRequest:
       type: object
